Fixed flying carpet fill image and carousel scrollbar

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -33,14 +33,14 @@ a.button:hover, a.button:focus {
 
 body, html {
   font-family:"Work Sans", "Open Sans", sans-serif;
-  color:#474747;
+  color:#575555;
   background-color:#fff;
 }
 
 body,input,textarea,button,select {
   font-size:15px;
   font-family:"Work Sans", "Open Sans", sans-serif;
-  color:#474747;
+  color:#575555;
   line-height:1.5;
 }
 
@@ -86,6 +86,10 @@ h6 a, .h6 a {
 .flex > div {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+}
+
+.object-fit-cover-child-img img {
+  object-fit: cover;
 }
 
 
@@ -206,7 +210,7 @@ header > div {
   text-transform: uppercase;
   font-weight: 600;
   font-size: 1.15rem;
-  color: #3d4246;
+  color: #575555;
 }
 
 .header-navbar nav ul li a:hover,
@@ -234,14 +238,15 @@ header > div {
 
 .funky-section {
   background-image: linear-gradient(90deg, rgb(21, 90, 84) 0, rgb(38, 172, 161));
-  padding:2rem;
+  padding:6rem;
   font-size:18px;
   text-align:center;
   color:white;
-  clip-path: polygon(100% 100%, 100% 0, -500% 0);   /* Use http://bennettfeely.com/clippy/ */  
+  clip-path: polygon(100% 100%, -500% 0, 100% 0);   /* Use http://bennettfeely.com/clippy/ */  
 }
 .funky-section h1, .funky-section h2, .funky-section h3 {
   color: white;
+  font-size: 40px;
 }
 
 
@@ -253,7 +258,11 @@ header > div {
     padding:2rem;
     font-size:18px;
     text-align:center;
-    color: #3d4246;
+    color: #575555;
+  }
+
+  .home-services-section-text {
+    max-width: 250px;
   }
     
   .home-services-section img {
@@ -275,19 +284,36 @@ header > div {
    Flying carpet
    ==========================================================================*/
 
-.flying-carpet-text-overlay {
+.flying-carpet-text-overlay-container {
   position: relative;
-  top: -10rem;
-  font-size: 40px;
-  font-weight: bold;
+}
+   
+.flying-carpet-text-overlay {
+  position: absolute;
+  top: 3rem;
+  left: 0;
+  right: 0;
+  font-size: 30px;
+  font-weight: 600;
   text-align: center;
   color: white;
+  z-index: 1;
+
 }
+
+.flying-carpet-text-overlay amp-fit-text {
+  height: 280px;
+}
+
 
 
 /* ==========================================================================
    Carousel
    ==========================================================================*/
+
+.i-amphtml-scrollable-carousel-container {
+   overflow-x: hidden !important; /* hide the scrollbar */
+}
 
 .amp-carousel-button {
   background-color: rgb(38, 172, 161);
@@ -300,17 +326,24 @@ header > div {
   padding-right: 0;
 }
 
-.carousel-heading {
-  font-weight: bold;
+.carousel-heading,
+.carousel-text {
+  max-width: 320px;
+  overflow-x: hidden;
   text-align: center;
+  white-space: normal;
+}
+
+.carousel-heading {
+  font-size: 17px;
+  font-weight: bold;
 }
 
 .carousel-text {
   white-space: normal;
-  max-width: 300px;
-  text-align: center;
+  font-weight: 100;
   padding-bottom: 1rem;
- }
+}
 
 
 /* ==========================================================================
@@ -319,7 +352,6 @@ header > div {
 
 #ActivateNews {
   background-color: #58636d;
-  margin-top: -3.8rem; 
   color: white;
   font-weight: bold;
   padding: 1rem;
@@ -404,7 +436,7 @@ footer .copyright {
    Services Page
    ==========================================================================*/
 
-   
+
 .services-page-accordion {
   width: 100%;
   display: grid;
